@@ -73,10 +73,13 @@
     </p>
     <p>
     <h2 style="text-align: center">Various filer headings</h2>
-    <img src="images/tuning_import.png" alt="Filer Window" class="double">
-    <img src="images/bank_root.png" alt="Filer Window" class="double">
-    <img src="images/bank_import.png" alt="Filer Window" class="double">
-    <img src="images/bank_export.png" alt="Filer Window" class="double">
+    <img src="images/tuning_import.png" alt="Filer Tuning" class="double">
+    <img src="images/bank_root.png" alt="Filer Root" class="double">
+    <img src="images/bank_export.png" alt="Filer Export" class="double">
+    <img src="images/bank_import.png" alt="Filer Import" class="double">
+    <b>Note</b>
+    <br>
+    &emsp;Neither 'Path to Bank Root dirs' nor 'Bank to Import' have a name field. This is because they are <em>directories</em> of files not individual files.
     </p>
     <a href="../starting/starting.html">Next</a> (Getting Started)
   </body>
