@@ -3,6 +3,8 @@ yoshimi 2.0.2 M
 2021-7-30 Will
 * Added filer images to new user guide.
   also many spelling corrections :(
+* Further work on manual CLI page.
+  also more images of filer headings.
 
 2021-7-29 Will
 * Updated PDF manual.
